--- a/pages/medicine/medicine-list.html
+++ b/pages/medicine/medicine-list.html
@@ -53,6 +53,63 @@
             </div>
 
 
+            <!--========== Medicine Submenu ===========-->
+            <div>
+                <button id="medicine"
+                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
+                    <div class="flex items-center gap-3 pointer-events-none">
+                        <img src="../../assets/svg/pill.svg" class="w-5 h-5 pointer-events-none">
+
+                        <span class="sidebar-text pointer-events-none">Medicine</span>
+                    </div>
+
+                    <img id="medicine-icon" src="../../assets/svg/cheveron-right.svg"
+                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
+                </button>
+
+                <div id="medicine-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
+                    <a href="../medicine/medicine-list.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Medicine List
+                    </a>
+
+                    <a href="../medicine/upcoming-medicine.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Upcoming Medicine
+                    </a>
+
+
+                </div>
+            </div>
+
+            <!--========== Billing Submenu ===========-->
+            <div>
+                <button id="billing"
+                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
+                    <div class="flex items-center gap-3 pointer-events-none">
+                        <img src="../../assets/svg/receipt.svg" class="w-5 h-5 pointer-events-none">
+
+                        <span class="sidebar-text pointer-events-none">Billing</span>
+                    </div>
+
+                    <img id="billing-icon" src="../../assets/svg/cheveron-right.svg"
+                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
+                </button>
+
+                <div id="billing-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
+                    <a href="../../pages/billing/medicine-sell.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Medicine Sell
+                    </a>
+
+                    <a href="../../pages/billing/patients-bill.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Patients Bill
+                    </a>
+                </div>
+            </div>
+
+
             <!--========== Doctors Submenu ===========-->
             <div>
                 <button id="doctors"
@@ -73,6 +130,14 @@
                     <a href="../../pages/doctors/specialist-doctor.html" data-nav
                         class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
                         specialist
+                    </a>
+                    <a href="../../pages/doctors/new-vacancy.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        New Vacancy
+                    </a>
+                    <a href="../../pages/doctors/applicants.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Applicants
                     </a>
                 </div>
             </div>
@@ -183,36 +248,6 @@
 
                 </div>
             </div>
-
-            <!--========== Medicine Submenu ===========-->
-            <div>
-                <button id="medicine"
-                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
-                    <div class="flex items-center gap-3 pointer-events-none">
-                        <img src="../../assets/svg/pill.svg" class="w-5 h-5 pointer-events-none">
-
-                        <span class="sidebar-text pointer-events-none">Medicine</span>
-                    </div>
-
-                    <img id="medicine-icon" src="../../assets/svg/cheveron-right.svg"
-                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
-                </button>
-
-                <div id="medicine-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
-                    <a href="../medicine/medicine-list.html" data-nav
-                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
-                        Medicine List
-                    </a>
-
-                    <a href="../medicine/upcoming-medicine.html" data-nav
-                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
-                        Upcoming Medicine
-                    </a>
-
-
-                </div>
-            </div>
-
         </nav>
 
         <!-- Logout Button at Bottom -->
@@ -311,7 +346,7 @@
             <nav class="text-sm text-gray-500">
                 <ol class="list-reset flex">
                     <li>
-                        <a href="/index.html" class="text-blue-600 hover:text-blue-700 font-medium">Home</a>
+                        <a href="../../index.html" class="text-blue-600 hover:text-blue-700 font-medium">Home</a>
                     </li>
                     <li>
                         <span class="mx-2">/</span>
@@ -411,6 +446,7 @@
                                 <th class="h-12 px-4 text-left font-semibold">Total Quantity</th>
                                 <th class="h-12 px-4 text-left font-semibold">Sell Price</th>
                                 <th class="h-12 px-4 text-left font-semibold">Discount</th>
+                                <th class="h-12 px-4 text-left font-semibold">Expired Date</th>
                                 <th class="h-12 px-4 text-left font-semibold">Updated At</th>
                                 <th class="h-12 px-4 text-left font-semibold">Updated By</th>
                                 <th class="h-12 px-4 text-left font-semibold">Action</th>
@@ -429,14 +465,15 @@
                                 <td class="p-4">250</td>
                                 <td class="p-4">₹20</td>
                                 <td class="p-4">5%</td>
+                                <td class="p-4 text-sm">2028-01-01</td>
                                 <td class="p-4 text-sm">2026-01-01</td>
                                 <td class="p-4">Admin</td>
                                 <td class="p-4 flex items-center space-x-1">
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/pencil.svg" alt="Edit">
+                                        <img src="/assets/svg/pencil.svg" alt="Edit">
                                     </button>
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/bin.svg" alt="Delete">
+                                        <img src="/assets/svg/bin.svg" alt="Delete">
                                     </button>
                                 </td>
                             </tr>
@@ -452,14 +489,15 @@
                                 <td class="p-4">180</td>
                                 <td class="p-4">₹45</td>
                                 <td class="p-4">10%</td>
+                                <td class="p-4 text-sm">2029-01-01</td>
                                 <td class="p-4 text-sm">2026-01-02</td>
                                 <td class="p-4">Pharmacist</td>
                                 <td class="p-4 flex items-center space-x-1">
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/pencil.svg" alt="Edit">
+                                        <img src="/assets/svg/pencil.svg" alt="Edit">
                                     </button>
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/bin.svg" alt="Delete">
+                                        <img src="/assets/svg/bin.svg" alt="Delete">
                                     </button>
                                 </td>
                             </tr>
@@ -475,14 +513,15 @@
                                 <td class="p-4">320</td>
                                 <td class="p-4">₹18</td>
                                 <td class="p-4">0%</td>
+                                <td class="p-4 text-sm">2029-06-01</td>
                                 <td class="p-4">2026-01-03</td>
                                 <td class="p-4">Manager</td>
                                 <td class="p-4 flex items-center space-x-1">
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/pencil.svg" alt="Edit">
+                                        <img src="/assets/svg/pencil.svg" alt="Edit">
                                     </button>
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/bin.svg" alt="Delete">
+                                        <img src="/assets/svg/bin.svg" alt="Delete">
                                     </button>
                                 </td>
                             </tr>
@@ -657,6 +696,18 @@
                                 </label>
                                 <div class="relative">
                                     <input type="number" placeholder="Enter discount..."
+                                        class="w-full px-4 py-2.5 text-sm text-gray-700 bg-white border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all shadow-sm hover:shadow-md placeholder-gray-400">
+                                </div>
+                            </div>
+
+                            <!--====== Expired Date Field ======-->
+                            <div class="col-span-2 md:col-span-1">
+                                <label class="block text-xs font-semibold text-gray-700 mb-2 flex items-center gap-1.5">
+                                    <img src="/assets/svg/calendar.svg" class="w-3.5 h-3.5" alt="">
+                                    Expired Date
+                                </label>
+                                <div class="relative">
+                                    <input type="date"
                                         class="w-full px-4 py-2.5 text-sm text-gray-700 bg-white border-2 border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all shadow-sm hover:shadow-md placeholder-gray-400">
                                 </div>
                             </div>
