--- a/pages/settings/app-menu.html
+++ b/pages/settings/app-menu.html
@@ -32,8 +32,8 @@
         <!--========== Search Bar ===========-->
         <div id="search-bar" class="p-4">
             <div class="relative">
-                <img src="../../assets/svg/magnifier.svg" class="absolute left-3 top-1/2 transform -translate-y-1/2 w-4 h-4"
-                    alt="">
+                <img src="../../assets/svg/magnifier.svg"
+                    class="absolute left-3 top-1/2 transform -translate-y-1/2 w-4 h-4" alt="">
                 <input type="text"
                     class="w-full pl-9 pr-3 py-2 text-sm text-gray-700 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all"
                     placeholder="Search..." />
@@ -50,6 +50,62 @@
                     <img src="../../assets/svg/home.svg" class="h-5 w-5 pointer-events-none">
                     <span class="sidebar-text">Home</span>
                 </a>
+            </div>
+
+            <!--========== Medicine Submenu ===========-->
+            <div>
+                <button id="medicine"
+                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
+                    <div class="flex items-center gap-3 pointer-events-none">
+                        <img src="../../assets/svg/pill.svg" class="w-5 h-5 pointer-events-none">
+
+                        <span class="sidebar-text pointer-events-none">Medicine</span>
+                    </div>
+
+                    <img id="medicine-icon" src="../../assets/svg/cheveron-right.svg"
+                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
+                </button>
+
+                <div id="medicine-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
+                    <a href="../../pages/medicine/medicine-list.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Medicine List
+                    </a>
+
+                    <a href="../../pages/medicine/upcoming-medicine.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Upcoming Medicine
+                    </a>
+
+
+                </div>
+            </div>
+
+            <!--========== Billing Submenu ===========-->
+            <div>
+                <button id="billing"
+                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
+                    <div class="flex items-center gap-3 pointer-events-none">
+                        <img src="../../assets/svg/receipt.svg" class="w-5 h-5 pointer-events-none">
+
+                        <span class="sidebar-text pointer-events-none">Billing</span>
+                    </div>
+
+                    <img id="billing-icon" src="../../assets/svg/cheveron-right.svg"
+                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
+                </button>
+
+                <div id="billing-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
+                    <a href="../../pages/billing/medicine-sell.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Medicine Sell
+                    </a>
+
+                    <a href="../../pages/billing/patients-bill.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Patients Bill
+                    </a>
+                </div>
             </div>
 
 
@@ -73,6 +129,14 @@
                     <a href="../../pages/doctors/specialist-doctor.html" data-nav
                         class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
                         specialist
+                    </a>
+                    <a href="../../pages/doctors/new-vacancy.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        New Vacancy
+                    </a>
+                    <a href="../../pages/doctors/applicants.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Applicants
                     </a>
                 </div>
             </div>
@@ -183,36 +247,6 @@
 
                 </div>
             </div>
-
-            <!--========== Medicine Submenu ===========-->
-            <div>
-                <button id="medicine"
-                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
-                    <div class="flex items-center gap-3 pointer-events-none">
-                        <img src="../../assets/svg/pill.svg" class="w-5 h-5 pointer-events-none">
-
-                        <span class="sidebar-text pointer-events-none">Medicine</span>
-                    </div>
-
-                    <img id="medicine-icon" src="../../assets/svg/cheveron-right.svg"
-                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
-                </button>
-
-                <div id="medicine-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
-                    <a href="../../pages/medicine/medicine-list.html" data-nav
-                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
-                        Medicine List
-                    </a>
-
-                    <a href="../../pages/medicine/upcoming-medicine.html" data-nav
-                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
-                        Upcoming Medicine
-                    </a>
-
-
-                </div>
-            </div>
-
         </nav>
 
         <!-- Logout Button at Bottom -->
@@ -311,7 +345,7 @@
             <nav class="text-sm text-gray-500">
                 <ol class="list-reset flex">
                     <li>
-                        <a href="/index.html" class="text-blue-600 hover:text-blue-700 font-medium">Home</a>
+                        <a href="../../index.html" class="text-blue-600 hover:text-blue-700 font-medium">Home</a>
                     </li>
                     <li>
                         <span class="mx-2">/</span>
@@ -702,7 +736,7 @@
         </div>
     </div>
 
-      <script src="../../js/app.js"></script>
+    <script src="../../js/app.js"></script>
 
 </body>
 
