--- a/pages/settings/system-user.html
+++ b/pages/settings/system-user.html
@@ -32,8 +32,8 @@
         <!--========== Search Bar ===========-->
         <div id="search-bar" class="p-4">
             <div class="relative">
-                <img src="../../assets/svg/magnifier.svg" class="absolute left-3 top-1/2 transform -translate-y-1/2 w-4 h-4"
-                    alt="">
+                <img src="../../assets/svg/magnifier.svg"
+                    class="absolute left-3 top-1/2 transform -translate-y-1/2 w-4 h-4" alt="">
                 <input type="text"
                     class="w-full pl-9 pr-3 py-2 text-sm text-gray-700 bg-gray-50 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all"
                     placeholder="Search..." />
@@ -52,6 +52,62 @@
                 </a>
             </div>
 
+
+            <!--========== Medicine Submenu ===========-->
+            <div>
+                <button id="medicine"
+                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
+                    <div class="flex items-center gap-3 pointer-events-none">
+                        <img src="../../assets/svg/pill.svg" class="w-5 h-5 pointer-events-none">
+
+                        <span class="sidebar-text pointer-events-none">Medicine</span>
+                    </div>
+
+                    <img id="medicine-icon" src="../../assets/svg/cheveron-right.svg"
+                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
+                </button>
+
+                <div id="medicine-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
+                    <a href="../../pages/medicine/medicine-list.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Medicine List
+                    </a>
+
+                    <a href="../../pages/medicine/upcoming-medicine.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Upcoming Medicine
+                    </a>
+
+
+                </div>
+            </div>
+
+            <!--========== Billing Submenu ===========-->
+            <div>
+                <button id="billing"
+                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
+                    <div class="flex items-center gap-3 pointer-events-none">
+                        <img src="../../assets/svg/receipt.svg" class="w-5 h-5 pointer-events-none">
+
+                        <span class="sidebar-text pointer-events-none">Billing</span>
+                    </div>
+
+                    <img id="billing-icon" src="../../assets/svg/cheveron-right.svg"
+                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
+                </button>
+
+                <div id="billing-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
+                    <a href="../../pages/billing/medicine-sell.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Medicine Sell
+                    </a>
+
+                    <a href="../../pages/billing/patients-bill.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Patients Bill
+                    </a>
+                </div>
+            </div>
 
             <!--========== Doctors Submenu ===========-->
             <div>
@@ -73,6 +129,14 @@
                     <a href="../../pages/doctors/specialist-doctor.html" data-nav
                         class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
                         specialist
+                    </a>
+                    <a href="../../pages/doctors/new-vacancy.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        New Vacancy
+                    </a>
+                    <a href="../../pages/doctors/applicants.html" data-nav
+                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
+                        Applicants
                     </a>
                 </div>
             </div>
@@ -183,36 +247,6 @@
 
                 </div>
             </div>
-
-            <!--========== Medicine Submenu ===========-->
-            <div>
-                <button id="medicine"
-                    class="has-submenu w-full flex items-center justify-between px-4 py-3 text-sm font-medium text-gray-700 rounded-lg hover:bg-[#EEF2FF] transition-all">
-                    <div class="flex items-center gap-3 pointer-events-none">
-                        <img src="../../assets/svg/pill.svg" class="w-5 h-5 pointer-events-none">
-
-                        <span class="sidebar-text pointer-events-none">Medicine</span>
-                    </div>
-
-                    <img id="medicine-icon" src="../../assets/svg/cheveron-right.svg"
-                        class="sidebar-submenu-icon w-4 h-4 transition-transform duration-200 sidebar-text pointer-events-none">
-                </button>
-
-                <div id="medicine-submenu" class="hidden mt-1 ml-11 space-y-1 sidebar-submenu">
-                    <a href="../../pages/medicine/medicine-list.html" data-nav
-                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
-                        Medicine List
-                    </a>
-
-                    <a href="../../pages/medicine/upcoming-medicine.html" data-nav
-                        class="block px-4 py-2 text-sm text-gray-600 rounded-lg hover:bg-[#EEF2FF] hover:text-gray-900 transition-colors">
-                        Upcoming Medicine
-                    </a>
-
-
-                </div>
-            </div>
-
         </nav>
 
         <!-- Logout Button at Bottom -->
@@ -311,7 +345,7 @@
             <nav class="text-sm text-gray-500">
                 <ol class="list-reset flex">
                     <li>
-                        <a href="/index.html" class="text-blue-600 hover:text-blue-700 font-medium">Home</a>
+                        <a href="../../index.html" class="text-blue-600 hover:text-blue-700 font-medium">Home</a>
                     </li>
                     <li>
                         <span class="mx-2">/</span>
@@ -372,8 +406,8 @@
                                 <div class="flex items-end">
                                     <button
                                         class="w-full px-6 py-2.5 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-blue-700 rounded-lg hover:from-blue-700 hover:to-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all duration-200 flex items-center justify-center gap-2 shadow-lg hover:shadow-xl hover:scale-105 transform">
-                                        <img src="../../assets/svg/white-magnifier.svg" class="w-4 h-4 pointer-events-none"
-                                            alt="">
+                                        <img src="../../assets/svg/white-magnifier.svg"
+                                            class="w-4 h-4 pointer-events-none" alt="">
                                         Search
                                     </button>
                                 </div>
@@ -384,8 +418,8 @@
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
-                                        <img src="../../assets/svg/setting-vertical.svg" class="w-4 h-4 pointer-events-none"
-                                            alt="">
+                                        <img src="../../assets/svg/setting-vertical.svg"
+                                            class="w-4 h-4 pointer-events-none" alt="">
                                         Clear Filters
                                     </button>
                                     <button type="button" data-targetModalId="system-user-add-modal"
@@ -427,7 +461,8 @@
                                 <td class="p-4">Connected</td>
                                 <td class="p-4">
                                     <div class="flex items-center space-x-1 ">
-                                        <img src="../../assets/svg/calendar.svg" class="w-3 h-3 pointer-events-none" alt="">
+                                        <img src="../../assets/svg/calendar.svg" class="w-3 h-3 pointer-events-none"
+                                            alt="">
                                         <span class="text-sm">Jan 1, 2026</span>
                                     </div>
                                 </td>
@@ -463,7 +498,8 @@
                                 <td class="p-4">Connected</td>
                                 <td class="p-4">
                                     <div class="flex items-center space-x-1 ">
-                                        <img src="../../assets/svg/calendar.svg" class="w-3 h-3 pointer-events-none" alt="">
+                                        <img src="../../assets/svg/calendar.svg" class="w-3 h-3 pointer-events-none"
+                                            alt="">
                                         <span class="text-sm">Jan 1, 2026</span>
                                     </div>
                                 </td>
@@ -506,7 +542,8 @@
 
                             <button type="button"
                                 class="group relative flex items-center gap-2 px-3 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-50 hover:border-gray-300 hover:shadow-md transition-all duration-200">
-                                <img src="../../assets/svg/cheveron-left.svg" class="w-4 h-4 pointer-events-none" alt="">
+                                <img src="../../assets/svg/cheveron-left.svg" class="w-4 h-4 pointer-events-none"
+                                    alt="">
                                 <span>Previous</span>
                             </button>
 
@@ -526,7 +563,8 @@
                                 class="group relative flex items-center gap-2 px-3 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-50 hover:border-gray-300 hover:shadow-md transition-all duration-200">
 
                                 <span>Next</span>
-                                <img src="../../assets/svg/cheveron-right.svg" class="w-4 h-4 pointer-events-none" alt="">
+                                <img src="../../assets/svg/cheveron-right.svg" class="w-4 h-4 pointer-events-none"
+                                    alt="">
                             </button>
                         </div>
                     </div>
@@ -612,8 +650,8 @@
 
                                     </select>
                                     <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
-                                        <img src="../../assets/svg/cheveron-down.svg" class="w-4 h-4 pointer-events-none"
-                                            alt="">
+                                        <img src="../../assets/svg/cheveron-down.svg"
+                                            class="w-4 h-4 pointer-events-none" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -626,7 +664,8 @@
                         <div class="flex gap-3 pt-2">
                             <button type="button" data-targetModalId="system-user-add-modal"
                                 class="close-modal  relative flex items-center gap-2 px-5 py-2.5 text-sm font-medium text-gray-700 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-50 hover:border-gray-300 hover:shadow-md hover:-translate-y-1 transition-all duration-200">
-                                <img src="../../assets/svg/corner-up-left.svg" class="w-4 h-4 pointer-events-none" alt="">
+                                <img src="../../assets/svg/corner-up-left.svg" class="w-4 h-4 pointer-events-none"
+                                    alt="">
                                 <span class="pointer-events-none">Cancel</span>
                             </button>
 
@@ -667,7 +706,7 @@
         </div>
     </div>
 
-      <script src="../../js/app.js"></script>
+    <script src="../../js/app.js"></script>
 
 </body>
 
