--- a/pages/doctors/core-doctors.html
+++ b/pages/doctors/core-doctors.html
@@ -442,7 +442,7 @@
                             </div>
 
                             <!--==== Action Buttons ====-->
-                            <div class="col-span-4 xl:col-span-1  flex items-end ">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
@@ -468,6 +468,7 @@
                             <tr class="border-b transition-colors ">
                                 <th class="h-12 px-4 text-left font-semibold">Doctor Id</th>
                                 <th class="h-12 px-4 text-left font-semibold">Name</th>
+                                <th class="h-12 px-4 text-left font-semibold">Profile</th>
                                 <th class="h-12 px-4 text-left font-semibold">Username</th>
                                 <th class="h-12 px-4 text-left font-semibold">Password</th>
                                 <th class="h-12 px-4 text-left font-semibold">Department</th>
@@ -486,10 +487,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">1</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. John Doe</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -530,10 +531,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">2</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Jane Smith</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -574,10 +575,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">3</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Robert Lee</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -617,10 +618,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">4</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -661,10 +662,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">5</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -705,10 +706,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">6</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -749,10 +750,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">7</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -793,10 +794,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">8</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -837,10 +838,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">9</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -881,10 +882,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">10</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -925,10 +926,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">11</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -969,10 +970,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">12</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -1013,10 +1014,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">13</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
@@ -1057,10 +1058,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">14</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     test@123
