--- a/pages/patients/patient-list.html
+++ b/pages/patients/patient-list.html
@@ -428,7 +428,7 @@
                             </div>
 
                             <!--==== Action Buttons ====-->
-                            <div class="col-span-4 xl:col-span-1  flex items-end ">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
@@ -451,6 +451,7 @@
                             <tr class="border-b transition-colors ">
                                 <th class="h-12 px-4 text-left font-semibold">Doctor Id</th>
                                 <th class="h-12 px-4 text-left font-semibold">Name</th>
+                                <th class="h-12 px-4 text-left font-semibold">Profile</th>
                                 <th class="h-12 px-4 text-left font-semibold">Phone</th>
                                 <th class="h-12 px-4 text-left font-semibold">Password</th>
                                 <th class="h-12 px-4 text-left font-semibold">Department</th>
@@ -468,10 +469,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">1</div>
                                 </td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. John Doe</span>
                                 </td>
                                 <td class="p-4">
                                     +97798565632231
@@ -511,10 +512,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">2</div>
                                 </td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Jane Smith</span>
                                 </td>
                                 <td class="p-4">
                                     +97798565632231
@@ -553,10 +554,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">3</div>
                                 </td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Robert Lee</span>
                                 </td>
                                 <td class="p-4">
                                     +97798565632231
@@ -595,10 +596,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">4</div>
                                 </td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     +97798565632231
