--- a/pages/reports/patient-report.html
+++ b/pages/reports/patient-report.html
@@ -413,7 +413,7 @@
                             </div>
 
                             <!--==== Action Buttons ====-->
-                            <div class="col-span-4 xl:col-span-1  flex items-end ">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
@@ -438,6 +438,7 @@
                             <tr class="border-b transition-colors ">
                                 <th class="h-12 px-4 text-left font-semibold">Id</th>
                                 <th class="h-12 px-4 text-left font-semibold">Patient Name</th>
+                                <th class="h-12 px-4 text-left font-semibold">Patient Profile</th>
                                 <th class="h-12 px-4 text-left font-semibold">Doctor Name</th>
                                 <th class="h-12 px-4 text-left font-semibold">Report Date</th>
                                 <th class="h-12 px-4 text-left font-semibold">Status </th>
@@ -452,10 +453,10 @@
                             <!--====== row 1 ===== -->
                             <tr class="border-b">
                                 <td class="p-4 text-xs">1</td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
-                                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Patient Photo"
-                                        class="h-8 w-8 rounded-full">
-                                    <span>Jane Smith</span>
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                                        alt="Photo" class="h-8 w-8 rounded-full">
                                 </td>
                                 <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4">2026-01-01</td>
@@ -482,10 +483,10 @@
                             <!--====== row 2 ===== -->
                             <tr class="border-b">
                                 <td class="p-4 text-xs">2</td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
-                                    <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Patient Photo"
-                                        class="h-8 w-8 rounded-full">
-                                    <span>Michael Johnson</span>
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                                        alt="Photo" class="h-8 w-8 rounded-full">
                                 </td>
                                 <td class="p-4">Dr. Emily Clark</td>
                                 <td class="p-4">2026-01-02</td>
@@ -512,10 +513,10 @@
                             <!--====== row 3 ===== -->
                             <tr class="border-b">
                                 <td class="p-4 text-xs">3</td>
+                                <td class="p-4">John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
-                                    <img src="https://randomuser.me/api/portraits/men/55.jpg" alt="Patient Photo"
-                                        class="h-8 w-8 rounded-full">
-                                    <span>Sarah Williams</span>
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                                        alt="Photo" class="h-8 w-8 rounded-full">
                                 </td>
                                 <td class="p-4">Dr. Robert Brown</td>
                                 <td class="p-4">2026-01-03</td>
