--- a/pages/service.html
+++ b/pages/service.html
@@ -438,7 +438,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-span-4 xl:col-span-1 flex items-end">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
@@ -448,7 +448,7 @@
                                     </button>
 
                                     <button type="button" data-targetModalId="service-add-modal"
-                                        class="open-modal  text-white font-semibold flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors shadow-sm hover:shadow-md">
+                                        class="open-modal text-white font-semibold flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors shadow-sm hover:shadow-md">
                                         <img src="../assets/svg/plus-white.svg" class="w-4 h-4 pointer-events-none"
                                             alt="">
                                         Add Service
