--- a/pages/settings/system-user.html
+++ b/pages/settings/system-user.html
@@ -414,7 +414,7 @@
                             </div>
 
                             <!--==== Action Buttons ====-->
-                            <div class="col-span-4 xl:col-span-1  flex items-end ">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
@@ -440,6 +440,7 @@
                             <tr class="border-b transition-colors ">
                                 <th class="h-12 px-4 text-left font-semibold">Id</th>
                                 <th class="h-12 px-4 text-left font-semibold">Name</th>
+                                <th class="h-12 px-4 text-left font-semibold">Profile</th>
                                 <th class="h-12 px-4 text-left font-semibold">Username</th>
                                 <th class="h-12 px-4 text-left font-semibold">Password</th>
                                 <th class="h-12 px-4 text-left font-semibold">Role</th>
@@ -454,6 +455,10 @@
                             <tr class="border-b">
                                 <td class="p-4">1</td>
                                 <td class="p-4">Alice Smith</td>
+                                <td class="p-4 flex items-center space-x-2">
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                                        alt="Photo" class="h-8 w-8 rounded-full">
+                                </td>
                                 <td class="p-4">hlo@user</td>
                                 <td class="p-4">****3</td>
 
@@ -491,6 +496,10 @@
                             <tr class="border-b">
                                 <td class="p-4">1</td>
                                 <td class="p-4">Alice Smith</td>
+                                <td class="p-4 flex items-center space-x-2">
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
+                                        alt="Photo" class="h-8 w-8 rounded-full">
+                                </td>
                                 <td class="p-4">hlo@user</td>
                                 <td class="p-4">****3</td>
 
@@ -523,11 +532,8 @@
                                     </div>
                                 </td>
                             </tr>
-
                         </tbody>
                     </table>
-
-
                 </div>
 
                 <!--============= Pagination ==============-->
