--- a/pages/billing/medicine-sell.html
+++ b/pages/billing/medicine-sell.html
@@ -410,7 +410,7 @@
                             </div>
 
                             <!--==== Action Buttons ====-->
-                            <div class="col-span-4 xl:col-span-1  flex items-end ">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
@@ -465,8 +465,8 @@
                                 </td>
                                 <td class="p-4 text-sm">2026-01-01</td>
                                 <td class="p-4 flex items-center space-x-1">
-                                    <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/pencil.svg" alt="Edit">
+                                    <button class="print-btn flex items-center justify-center h-6 w-6 p-0">
+                                        <img src="../../assets/svg/printer.svg" class="pointer-events-none" alt="print">
                                     </button>
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
                                         <img src="../../assets/svg/bin.svg" alt="Delete">
@@ -492,8 +492,8 @@
                                 </td>
                                 <td class="p-4 text-sm">2026-01-02</td>
                                 <td class="p-4 flex items-center space-x-1">
-                                    <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/pencil.svg" alt="Edit">
+                                    <button class="print-btn flex items-center justify-center h-6 w-6 p-0">
+                                        <img src="../../assets/svg/printer.svg" class="pointer-events-none" alt="print">
                                     </button>
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
                                         <img src="../../assets/svg/bin.svg" alt="Delete">
@@ -519,8 +519,8 @@
                                 </td>
                                 <td class="p-4 text-sm">2026-01-03</td>
                                 <td class="p-4 flex items-center space-x-1">
-                                    <button class="flex items-center justify-center h-6 w-6 p-0">
-                                        <img src="../../assets/svg/pencil.svg" alt="Edit">
+                                    <button class="print-btn flex items-center justify-center h-6 w-6 p-0">
+                                        <img src="../../assets/svg/printer.svg" class="pointer-events-none" alt="print">
                                     </button>
                                     <button class="flex items-center justify-center h-6 w-6 p-0">
                                         <img src="../../assets/svg/bin.svg" alt="Delete">
