--- a/pages/doctors/specialist-doctor.html
+++ b/pages/doctors/specialist-doctor.html
@@ -443,12 +443,11 @@
                             </div>
 
                             <!--==== Action Buttons ====-->
-                            <div class="col-span-4 xl:col-span-1  flex items-end ">
+                            <div class="col-span-4 xl:col-span-1 flex items-end justify-end">
                                 <div class="flex gap-2">
                                     <button type="reset"
                                         class="text-sm text-gray-600 hover:text-gray-700 font-medium flex items-center gap-1.5 px-3 py-2 hover:bg-gray-200 rounded-lg transition-colors">
                                         <img src="../../assets/svg/setting-vertical.svg" class="w-4 h-4" alt="">
-
                                         Clear
                                     </button>
 
@@ -469,6 +468,7 @@
                             <tr class="border-b transition-colors ">
                                 <th class="h-12 px-4 text-left font-semibold">Doctor Id</th>
                                 <th class="h-12 px-4 text-left font-semibold">Name</th>
+                                <th class="h-12 px-4 text-left font-semibold">Profile</th>
                                 <th class="h-12 px-4 text-left font-semibold">Speciality/Expertise</th>
                                 <th class="h-12 px-4 text-left font-semibold">Department</th>
                                 <th class="h-12 px-4 text-left font-semibold">Experience</th>
@@ -485,10 +485,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">1</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. John Doe</span>
                                 </td>
                                 <td class="p-4">
                                     <span
@@ -525,10 +525,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">2</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Jane Smith</span>
                                 </td>
                                 <td class="p-4">
                                     <span
@@ -563,10 +563,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">3</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Robert Lee</span>
                                 </td>
                                 <td class="p-4">
                                     <span
@@ -601,10 +601,10 @@
                                 <td class="p-4">
                                     <div class="text-xs">4</div>
                                 </td>
+                                <td class="p-4">Dr. John Doe</td>
                                 <td class="p-4 flex items-center space-x-2">
                                     <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8dXNlcnxlbnwwfHwwfHx8MA%3D%3D"
                                         alt="Doctor Photo" class="h-8 w-8 rounded-full">
-                                    <span>Dr. Emily Davis</span>
                                 </td>
                                 <td class="p-4">
                                     <span
@@ -636,8 +636,6 @@
                             </tr>
                         </tbody>
                     </table>
-
-
                 </div>
                 <!--============= Pagination ==============-->
                 <div class="rounded-xl p-3">
